# mechanism-prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DATA.md  DEPLOYMENT.md  FUTURE_TASKS.md  LICENSE  MODEL.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DATA.md  FUTURE_TASKS.md  MODEL.md  architecture.md  glossary.md  repo-map.md  rollout_design.md
docs/adr/: 0001-canonical-chain-rule-grouper.md  0002-clean-training-pool-filter.md  0003-heuristic-charges-in-apply-delta.md  0004-parquet-canonical-cache.md  TEMPLATE.md
docs/skills/: debug-diverged-reaction.md  launch-training.md  rebuild-cache.md
examples/: README.md  quickstart.py
legacy/: PmechDB_POC.ipynb
scripts/: _bucket_diverged.py  build_parquet_cache.py  cache_audit.py  charge_diagnostic.py  evaluate.py  gen_repo_map.py  plot_history.py  sanity_check.py  sync.config.example.ps1  sync.ps1  train.py  verify_apply_delta_e2e.py  verify_apply_delta_sequential.py  verify_arrow_parser.py  verify_cache_rollout.py
scripts/slurm/: eval.sbatch  train.sbatch  verify_all.sbatch
src/mech_uspto/: __init__.py  constants.py
src/mech_uspto/chemistry/: __init__.py  apply_delta.py
src/mech_uspto/data/: __init__.py  arrow_parser.py  cache_schema.py  dataset.py  featurization.py  loaders.py  parquet_dataset.py  parser.py  schema.py  spectators.py  (+1 more)
tests/: conftest.py  test_apply_delta.py  test_apply_delta_e2e_slice.py  test_arrow_parser.py  test_collation.py  test_dataset.py  test_engine.py  test_featurization.py  test_featurization_post_delta.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_parquet_dataset.py  test_parser.py  test_plot_history.py  test_resume.py  test_seeding_and_amp.py  test_tracking.py  test_transformations.py  test_transformations_diff.py
tests/fixtures/: mock_reaction.json  sample_reactions.csv
(+8 files in other folders)
