[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech_uspto"
version = "0.1.0"
description = "Dual-mode (stepwise vs end-to-end) graph-transformer ablation study on the mech-USPTO-31k multi-step reaction dataset."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tom Jacob", email = "tomyakov01@gmail.com"},
]
keywords = [
    "chemistry",
    "cheminformatics",
    "reaction-prediction",
    "graph-neural-networks",
    "graph-transformer",
    "mech-uspto",
    "pytorch",
    "pytorch-geometric",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
    "tqdm",
    "torch",
    "torch_geometric",
    "rdkit",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "pre-commit>=3",
    "build",
]

[project.urls]
Homepage = "https://github.com/TomJacob01/mechanism-prediction"
Source = "https://github.com/TomJacob01/mechanism-prediction"
Issues = "https://github.com/TomJacob01/mechanism-prediction/issues"

[project.scripts]
mech-uspto-train = "mech_uspto.scripts.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
